objects/Facility_Audits__c.object
<CustomObject>
    <description>Facility Audits</description>
    <fields>
        <fullName>A_Finding__c</fullName>
        <description>A Findings</description>
        <inlineHelpText>A Findings</inlineHelpText>
        <label>A Finding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Audit_Date__c</fullName>
        <description>Audit Date</description>
        <inlineHelpText>Audit Date</inlineHelpText>
        <label>Audit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audit_Group__c</fullName>
        <description>Audit Group</description>
        <inlineHelpText>Audit Group</inlineHelpText>
        <label>Audit Group</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual WCA</fullName>
                    <default>true</default>
                    <label>Annual WCA</label>
                </value>
                <value>
                    <fullName>Periodic FS</fullName>
                </value>
                <value>
                    <fullName>WCA Follow Up CAPA</fullName>
                </value>
                <value>
                    <fullName>FS Follow Up CAPA</fullName>
                </value>
                <value>
                    <fullName>On Site Investigation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Audit_Request_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Audit Request Date</description>
        <inlineHelpText>Audit Request Date</inlineHelpText>
        <label>Audit Request Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audit_Type__c</fullName>
        <description>Audit Type</description>
        <inlineHelpText>Audit Type</inlineHelpText>
        <label>Audit Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Audit_Group__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WCA</fullName>
                    <default>true</default>
                    <label>WCA</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>FS</fullName>
                </value>
                <value>
                    <fullName>WCA CAPA (1 Mnth)</fullName>
                </value>
                <value>
                    <fullName>WCA CAPA (3 Mnth)</fullName>
                </value>
                <value>
                    <fullName>WCA CAPA (6 Mnth)</fullName>
                </value>
                <value>
                    <fullName>Other CAPA ( 6 Mnth)</fullName>
                </value>
                <value>
                    <fullName>FS CAPA (1 Mnth)</fullName>
                </value>
                <value>
                    <fullName>FS CAPA (3 Mnth)</fullName>
                </value>
                <value>
                    <fullName>FS CAPA (6 Mnth)</fullName>
                </value>
                <value>
                    <fullName>On Site Investigation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B1_Findings__c</fullName>
        <description>B1 Findings</description>
        <inlineHelpText>B1 Findings</inlineHelpText>
        <label>B1 Findings</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B2_6_Findings__c</fullName>
        <description>B2 &lt; 6 Findings</description>
        <inlineHelpText>B2 &lt; 6 Findings</inlineHelpText>
        <label>B2 &lt; 6 Findings</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B2_Finding__c</fullName>
        <description>B2 Findings</description>
        <inlineHelpText>B2 Findings</inlineHelpText>
        <label>B2 Findings</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B2_T_Findings__c</fullName>
        <description>B2 + To Findings</description>
        <inlineHelpText>B2 + To Findings</inlineHelpText>
        <label>B2 + T Findings</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAPA_Due_Date__c</fullName>
        <description>CAPA Due Date</description>
        <formula>CASE( 
 Audit_Type__c, 
&quot;WCA CAPA (1 Mnth)&quot;, Audit_Request_Date__c  + 30, 
&quot;WCA CAPA (3 Mnth)&quot;, Audit_Request_Date__c  + 90, 
&quot;WCA CAPA (6 Mnth)&quot;, Audit_Request_Date__c  + 180, 
&quot;Other CAPA (6 Mnth)&quot;, Audit_Request_Date__c  + 180, 
&quot;FS CAPA (1 Mnth)&quot;, Audit_Request_Date__c  + 30, 
&quot;FS CAPA (3 Mnth)&quot;, Audit_Request_Date__c  + 90, 
&quot;FS CAPA (6 Mnth)&quot;, Audit_Request_Date__c  + 180, 
 null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CAPA Due Date</inlineHelpText>
        <label>CAPA Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Critical_Findings__c</fullName>
        <description>Critical Findings</description>
        <inlineHelpText>Critical Findings</inlineHelpText>
        <label>Critical Findings</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facility_Number__c</fullName>
        <description>Facility Number</description>
        <formula>Facility__r.Facility_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Facility Number</inlineHelpText>
        <label>Facility Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <description>Facility</description>
        <inlineHelpText>Facility</inlineHelpText>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Facility Audits</relationshipLabel>
        <relationshipName>Facility_Audits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Major_Findings__c</fullName>
        <description>Major Findings</description>
        <inlineHelpText>Major Findings</inlineHelpText>
        <label>Major Findings</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minor_Findings__c</fullName>
        <description>Minor Findings</description>
        <inlineHelpText>Minor Findings</inlineHelpText>
        <label>Minor Findings</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Moderate_Findings__c</fullName>
        <description>Moderate Findings</description>
        <inlineHelpText>Moderate Findings</inlineHelpText>
        <label>Moderate Findings</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <description>Outcome</description>
        <formula>IF( 
OR( 
 ISPICKVAL( Audit_Type__c, &quot;On Site Investigation&quot; ) , 
 ISBLANK(Audit_Date__c)), &quot; &quot;, 

 IF (OR( ISPICKVAL( A_Finding__c , &quot;Yes&quot;), 
 ISPICKVAL( B1_Findings__c , &quot;Yes&quot;)),&quot;High&quot;, 
IF( OR(ISPICKVAL( B2_Finding__c , &quot;Yes&quot;), 
 ISPICKVAL( B2_6_Findings__c , &quot;Yes&quot;), 
 ISPICKVAL(  B2_T_Findings__c  ,&quot;Yes&quot;)),&quot;Medium&quot;,&quot;Low&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Outcome</inlineHelpText>
        <label>Outcome</label>
        <type>Text</type>
    </fields>
    <label>Facility Audits</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Facility_Number__c</columns>
        <columns>Audit_Group__c</columns>
        <columns>Audit_Type__c</columns>
        <columns>Audit_Request_Date__c</columns>
        <columns>Audit_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Facility Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facility Audits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>